fix : allowedOrigins 수정
- allowedOrigins 수정

연관 이슈
- #187